--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">eventest</string>
     <string name="checkbox">CheckBox</string>
+    <string name="widget_label">AnEvent</string>
+    <string name="widget_title">Widget title</string>
+    <string name="test_click">Test click</string>
 </resources>
