--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="widget_label">AnEvent</string>
     <string name="widget_title">Widget title</string>
     <string name="test_click">Test click</string>
+    <string name="todo_icon">todo_icon</string>
+    <string name="content">Content</string>
+    <string name="date_event">Date</string>
 </resources>
