--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="date_event">Date</string>
     <string name="note">Note</string>
     <string name="date">Date</string>
+    <string name="action_undo">undo</string>
+    <string name="action_settings">settings</string>
 </resources>
