--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="date">Date</string>
     <string name="action_undo">undo</string>
     <string name="action_settings">settings</string>
+    <string name="time">Time</string>
 </resources>
