--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="time">Time</string>
     <string name="cancel">Cancel</string>
     <string name="OK">OK</string>
+    <string name="action_edit">edit</string>
 </resources>
