--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="checkbox">CheckBox</string>
     <string name="widget_label">AnEvent</string>
-    <string name="widget_title">Widget title</string>
+    <string name="widget_title">Memo</string>
     <string name="test_click">Test click</string>
     <string name="todo_icon">todo_icon</string>
     <string name="content">Content</string>
