--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,12 @@
     <string name="note">Note</string>
     <string name="date">Date</string>
     <string name="action_undo">undo</string>
-    <string name="action_settings">settings</string>
+    <string name="action_settings">Settings</string>
     <string name="time">Time</string>
     <string name="cancel">Cancel</string>
     <string name="OK">OK</string>
     <string name="action_edit">edit</string>
     <string name="about">About</string>
     <string name="version">Version:</string>
+    <string name="pref_start_with_new_memo">Start with new memo</string>
 </resources>
