--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="about">About</string>
     <string name="version">Version:</string>
     <string name="pref_start_with_new_memo">Start with new memo</string>
+    <string name="start_new_memo">start_new_memo</string>
 </resources>
