--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="version">Version:</string>
     <string name="pref_start_with_new_memo">Start with new memo</string>
     <string name="start_new_memo">start_new_memo</string>
-    <string name="aad_photo">+Photo</string>
+    <string name="add_photo">+Photo</string>
     <string name="add_location">+Location</string>
 </resources>
