Add file from default file manager.
Add addRemainder icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="start_new_memo">start_new_memo</string>
     <string name="add_photo">+Photo</string>
     <string name="add_location">+Location</string>
+    <string name="add_remainder">Remainder</string>
+    <string name="add_file">+File</string>
 </resources>
