--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="add_location">+Location</string>
     <string name="add_remainder">Remainder</string>
     <string name="add_file">+File</string>
+    <string name="add_timestamp">+Add Timestamp</string>
 </resources>
